# coptic-transliterator-llm

./: .gitignore  README.md  app.py  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  text_utils.py  transliterator.py
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
coptictranslit/: __init__.py  __main__.py
tests/: test_app_smoke.py  test_cli.py  test_text_utils.py  test_transliterator.py
texts/: library.json
